--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ before_install:
     - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
     - sudo apt-get update -qq
     - sudo apt-get install -qq qt5-qmake qtbase5-dev qtdeclarative5-dev libqt5webkit5-dev libsqlite3-dev
+    - sudo apt-get install -qq qtbase5-dev
+    - sudo apt-get install -qq qtdeclarative5-dev
+    - sudo apt-get install -qq libqt5webkit5-dev
 script:
     - qmake -qt=qt5 -v
     - qmake -qt=qt5
