--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler:
 
 before_install:
     - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
-    - sudo apt-get update -qqі
+    - sudo apt-get update -qq
     - sudo apt-get install -qq qtbase5-dev
     - sudo apt-get install -qq qtdeclarative5-dev
     - sudo apt-get install -qq libqt5webkit5-dev
