--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,12 @@
-language: cpp
-compiler:
-  - gcc
-  - clang
+sudo: required
+dist: trusty
 
-before_install:
-    - sudo add-apt-repository --yes ppa:ubuntu-sdk-team/ppa
-    - sudo apt-get update -qq
-    - sudo apt-get install -qq qtbase5-dev
-    - sudo apt-get install -qq qtdeclarative5-dev
-    - sudo apt-get install -qq libqt5webkit5-dev
+install:
+  - sudo apt-get install -y qt5-default qttools5-dev-tools #install necessary Qt files
+
 script:
-    - qmake -qt=qt5 -v
-    - qmake -qt=qt5
-    - make
-    - make lav8.pro
+  - qmake "CONFIG += console" lab8.pro #we gonna compile for Unit test first
+  - make
+  - ./lab8 #run unit test
+  - rm Makefile lab8 *.o #remove files (which are generated from unit test) for next build
+
