--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,21 @@
+language: cpp
+os:
+- linux
 sudo: required
 dist: trusty
 
+before_install:
+  - sudo apt-get install libssl-dev
+  - sh scripts/install-libprogbase.sh
+
 install:
   - sudo apt-get install -y qt5-default qttools5-dev-tools #install necessary Qt files
+  
 
+  
 script:
-  - qmake "CONFIG += console" lab8.pro #we gonna compile for Unit test first
+  - qmake lab8.pro #we gonna compile for Unit test first
   - make
   - ./lab8 #run unit test
-  - rm Makefile lab8 *.o #remove files (which are generated from unit test) for next build
+
 
