--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,16 @@
+sudo: required
 language: cpp
 os:
-- linux
-sudo: required
-dist: trusty
+  - linux
+compiler: 
+  - g++	
 
 before_install:
+  - sudo apt-get install libjansson4 libjansson-dev
   - sudo apt-get install libssl-dev
   - sh scripts/install-libprogbase.sh
 
-install:
-  - sudo apt-get install -y qt5-default qttools5-dev-tools #install necessary Qt files
-  
-
-  
-script:
-  - qmake lab8.pro #we gonna compile for Unit test first
-  - make
-  - ./lab8 #run unit test
-
-
+script: 
+  - cmake . 
+  - make .
+  - make json
