--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,29 +22,12 @@
 
 
 cmake_minimum_required(VERSION 2.8.7)
-#
-# Common settings
-#
 
-# adds ./include to compiler include directories
 include_directories(include)
-# compiles code files from ./src folder
-file(GLOB LIB_SOURCES "src/*.c")
+file(GLOB LIB_SOURCES "src/*.cpp")
 
-#
-# first project (static lib)
-#
-project (json)
-# to build static library target with name libmtmodule.a
-add_library(${CMAKE_PROJECT_NAME} STATIC ${LIB_SOURCES})
+project (https_server)
+add_executable(${CMAKE_PROJECT_NAME} "main.cpp" ${LIB_SOURCES})
+target_link_libraries(${CMAKE_PROJECT_NAME} progbase-cpp progbase ssl jansson)
 
-
-# to install library headers
-install(
-    DIRECTORY include/ DESTINATION /usr/local/include
-    FILES_MATCHING PATTERN "*.h"
-)
-# Set the location for library installation
-# Use "sudo make install" in build directory to apply
-install(TARGETS ${CMAKE_PROJECT_NAME} DESTINATION /usr/local/lib)
-SET(CMAKE_CXX_FLAGS "-std=c++11 -g")
+SET(CMAKE_CXX_FLAGS "-std=c++11 -Werror -Wall")
